TIKA-4334: replace pipes and server with newer apis - add eval and detector controllers
